# Wrapping and stuff

# Do jpeg (8,12, 16 lossly lossless). From ijg
if(NOT MDCM_USE_SYSTEM_LJPEG)
  set(JPEG_NAMESPACE "MDCMJPEG")
  set(JPEG_INSTALL_NO_LIBRARIES ${MDCM_INSTALL_NO_LIBRARIES})
  set(JPEG_INSTALL_BIN_DIR      ${MDCM_INSTALL_BIN_DIR})
  set(JPEG_INSTALL_LIB_DIR      ${MDCM_INSTALL_LIB_DIR})
  set(JPEG_INSTALL_INCLUDE_DIR  ${MDCM_INSTALL_INCLUDE_DIR}/mdcmjpeg)
  subdirs(mdcmjpeg)
endif()

# Do openjpeg (jpeg2000 implementation)
if(NOT MDCM_USE_SYSTEM_OPENJPEG)
  set(OPENJPEG_NAMESPACE "MDCMOPENJPEG")
  set(OPENJPEG_INSTALL_NO_LIBRARIES ${MDCM_INSTALL_NO_LIBRARIES})
  set(OPENJPEG_INSTALL_BIN_DIR      ${MDCM_INSTALL_BIN_DIR})
  set(OPENJPEG_INSTALL_LIB_DIR      ${MDCM_INSTALL_LIB_DIR})
  set(OPENJPEG_INSTALL_INCLUDE_DIR  ${MDCM_INSTALL_INCLUDE_DIR}/mdcmopenjpeg)
  subdirs(mdcmopenjpeg)
  mark_as_advanced(BUILD_JPIP BUILD_JPWL BUILD_CODEC BUILD_DOC BUILD_MJ2 BUILD_PKGCONFIG_FILES BUILD_SHARED_LIBS BUILD_THIRDPARTY OPJ_DATA_ROOT OPJ_DISABLE_TPSOT_FIX)
endif()

# Do jpegls (JPEG-LS aka near lossless implementation)
if(MDCM_USE_JPEGLS)
if(NOT MDCM_USE_SYSTEM_CHARLS)
  set(CHARLS_NAMESPACE "MDCMCHARLS")
  set(CHARLS_INSTALL_NO_LIBRARIES ${MDCM_INSTALL_NO_LIBRARIES})
  set(CHARLS_INSTALL_BIN_DIR      ${MDCM_INSTALL_BIN_DIR})
  set(CHARLS_INSTALL_LIB_DIR      ${MDCM_INSTALL_LIB_DIR})
  set(CHARLS_INSTALL_INCLUDE_DIR  ${MDCM_INSTALL_INCLUDE_DIR}/mdcmcharls)
  subdirs(mdcmcharls)
endif()
endif()

# Do zlib
if(NOT MDCM_USE_SYSTEM_ZLIB)
  set(ZLIB_NAMESPACE "MDCMZLIB")
  set(ZLIB_INSTALL_NO_LIBRARIES ${MDCM_INSTALL_NO_LIBRARIES})
  set(ZLIB_INSTALL_BIN_DIR      ${MDCM_INSTALL_BIN_DIR})
  set(ZLIB_INSTALL_LIB_DIR      ${MDCM_INSTALL_LIB_DIR})
  subdirs(mdcmzlib)
endif()

# you could be running mingw32 on linux in which case you do NOT want the mdcmuuid lib
if(NOT WIN32 AND NOT MINGW)
  if(NOT MDCM_USE_SYSTEM_UUID)
    set(UUID_NAMESPACE "MDCMUUID")
    set(UUID_INSTALL_NO_LIBRARIES ${MDCM_INSTALL_NO_LIBRARIES})
    set(UUID_INSTALL_BIN_DIR      ${MDCM_INSTALL_BIN_DIR})
    set(UUID_INSTALL_LIB_DIR      ${MDCM_INSTALL_LIB_DIR})
    subdirs(mdcmuuid)
  endif()
endif()

add_subdirectory(mdcmrle)
