if(NOT MDCM_USE_SYSTEM_LJPEG)
  set(JPEG_NAMESPACE "MDCMJPEG")
  set(JPEG_INSTALL_NO_LIBRARIES ${MDCM_INSTALL_NO_LIBRARIES})
  set(JPEG_INSTALL_BIN_DIR      ${MDCM_INSTALL_BIN_DIR})
  set(JPEG_INSTALL_LIB_DIR      ${MDCM_INSTALL_LIB_DIR})
  set(JPEG_INSTALL_INCLUDE_DIR  ${MDCM_INSTALL_INCLUDE_DIR}/mdcmjpeg)
  add_subdirectory(mdcmjpeg)
endif()

if(NOT MDCM_USE_SYSTEM_OPENJPEG)
  set(OPENJPEG_NAMESPACE "MDCMOPENJPEG")
  set(OPENJPEG_INSTALL_NO_LIBRARIES ${MDCM_INSTALL_NO_LIBRARIES})
  set(OPENJPEG_INSTALL_BIN_DIR      ${MDCM_INSTALL_BIN_DIR})
  set(OPENJPEG_INSTALL_LIB_DIR      ${MDCM_INSTALL_LIB_DIR})
  set(OPENJPEG_INSTALL_INCLUDE_DIR  ${MDCM_INSTALL_INCLUDE_DIR}/mdcmopenjpeg)
  add_subdirectory(mdcmopenjpeg)
  mark_as_advanced(OPJ_DISABLE_TPSOT_FIX)
endif()

if(NOT MDCM_USE_SYSTEM_CHARLS)
  set(CHARLS_NAMESPACE "MDCMCHARLS")
  set(CHARLS_INSTALL_NO_LIBRARIES ${MDCM_INSTALL_NO_LIBRARIES})
  set(CHARLS_INSTALL_BIN_DIR      ${MDCM_INSTALL_BIN_DIR})
  set(CHARLS_INSTALL_LIB_DIR      ${MDCM_INSTALL_LIB_DIR})
  set(CHARLS_INSTALL_INCLUDE_DIR  ${MDCM_INSTALL_INCLUDE_DIR}/mdcmcharls)
  add_subdirectory(mdcmcharls)
endif()

if(NOT MDCM_USE_SYSTEM_ZLIB)
  set(ZLIB_NAMESPACE "MDCMZLIB")
  set(ZLIB_INSTALL_NO_LIBRARIES ${MDCM_INSTALL_NO_LIBRARIES})
  set(ZLIB_INSTALL_BIN_DIR      ${MDCM_INSTALL_BIN_DIR})
  set(ZLIB_INSTALL_LIB_DIR      ${MDCM_INSTALL_LIB_DIR})
  add_subdirectory(mdcmzlib)
endif()

if(NOT WIN32 AND NOT MINGW)
  if(NOT MDCM_USE_SYSTEM_UUID)
    set(UUID_NAMESPACE "MDCMUUID")
    set(UUID_INSTALL_NO_LIBRARIES ${MDCM_INSTALL_NO_LIBRARIES})
    set(UUID_INSTALL_BIN_DIR      ${MDCM_INSTALL_BIN_DIR})
    set(UUID_INSTALL_LIB_DIR      ${MDCM_INSTALL_LIB_DIR})
    add_subdirectory(mdcmuuid)
  endif()
endif()

add_subdirectory(mdcmrle)

if(MDCM_USE_PVRG)
  if(NOT MDCM_USE_SYSTEM_PVRG)
    add_subdirectory(pvrg)
  endif()
endif()
